# aiogram-template

./: =4.2.0rc1  LICENSE  README.md  alembic.ini  pyproject.toml
src/: __main__.py  bot.py  config.py  server.py  templates.py
src/alembic/: env.py
src/alembic/versions/: 3a54e4bce4e7_init.py
src/api/: admin.py  root.py
src/db/crud/: session.py  users.py
src/db/models/: __init__.py  models.py
src/telegram/handlers/: admin.py  start.py
src/templates/sqladmin/: index.html
telegram_bot/: __main__.py  alembic.ini  templates.py
telegram_bot/alembic/: env.py
telegram_bot/alembic/versions/: 3a54e4bce4e7_init.py
telegram_bot/db/crud/: session.py  users.py
telegram_bot/telegram/handlers/: admin.py  start.py
telegram_bot/templates/: admin.j2  start.j2
